--- a/MasterMindWPL/MainWindow.xaml
+++ b/MasterMindWPL/MainWindow.xaml
@@ -40,7 +40,8 @@
         <Ellipse Name="ellipseColor2" Grid.Row="2" Grid.Column="1" Width="80" Height="80" StrokeThickness="5"></Ellipse>
         <Ellipse Name="ellipseColor3" Grid.Row="2" Grid.Column="2" Width="80" Height="80" StrokeThickness="5"></Ellipse>
         <Ellipse Name="ellipseColor4" Grid.Row="2" Grid.Column="3" Width="80" Height="80" StrokeThickness="5"></Ellipse>
-        <Button Name="btnCheckCode" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Click="btnCheckCode_Click" Margin="50">Check code</Button>
+        <Button Name="btnCheckCode" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Click="btnCheckCode_Click" Margin="40" VerticalAlignment="Top">Check code</Button>
+        <Button Name="btnGetHint" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Click="btnGetHint_Click" Margin="40" VerticalAlignment="Bottom">Get hint</Button>
         <TextBlock Name="TxtCode" Grid.Row="4" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="Collapsed" KeyDown="TxtCode_KeyDown"></TextBlock>
         <TextBlock Name="TxtPogingen" Grid.Row="4" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
         <ListBox Grid.Row="1" Grid.Column="4" Grid.RowSpan="4" Name="ListBoxHistoriek" Background="Gray"/>
